Reduce use of uniform-int because it is very slow